--- a/Basics/rotation_and_edge_detection.ipynb
+++ b/Basics/rotation_and_edge_detection.ipynb
@@ -22,6 +22,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1280, 960, 3)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 150,
    "metadata": {},
    "outputs": [
@@ -48,6 +68,55 @@
    "metadata": {},
    "source": [
     "### Let us rotate this image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "h,w = gray_img.shape\n",
+    "\n",
+    "(cX,cY) = (w/2,h/2)\n",
+    "M = cv2.getRotationMatrix2D((cX,cY), 90, 1)\n",
+    "\n",
+    "cos = np.abs(M[0, 0])\n",
+    "sin = np.abs(M[0, 1])\n",
+    "\n",
+    "nW = int((h * sin) + (w * cos))\n",
+    "nH = int((h * cos) + (w * sin))\n",
+    "\n",
+    "M[0, 2] += (nW / 2) - cX\n",
+    "M[1, 2] += (nH / 2) - cY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "affine_transform = cv2.warpAffine(gray_img, M, (img.shape[0], img.shape[1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow(\"adjusted affine rotation\", affine_transform)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -80,6 +149,15 @@
    "source": [
     "plt.imshow(rotated)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = cv2.getRotationMatrix2D()"
    ]
   },
   {
@@ -136,9 +214,7 @@
    "execution_count": 170,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
